# glob

./: .gitignore  Taskfile.yml  pyproject.toml  setup.py
glob/: __main__.py  glob.py
