[tool.poetry]
name = "glob"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
isort = "^5.10.1"
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
